--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         
 
         </ul>
-        <div id = "price-info"></div>
+        <div id = "coin-info"></div>
     </div>
     <script src = "javascripts/index.js"></script>
 </body>
